--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -1,5 +1,8 @@
-<div class="hero-unit">
 
-<p>Hello Search!</p>
 
+<div class="container-fluid">
+ <div class="hero-unit">
+  <p>Hello Search!</p>
+
+  </div>
 </div>
