Add books controller.

--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -12,7 +12,7 @@
 <div class="hero-unit middle">
    <div class="container">
      <div class="hero-unit top3">
-       <%= form_tag("/search", :method => "get") do %>
+       <%= form_tag("/search", method: "post") do %>
            <%= label_tag(:q, "Book Search:") %>
            <%= text_field_tag(:q) %>
            <%= submit_tag("search") %>
