--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Bibliobridge</a>
+          <a class="brand" href="#"><%= image_tag "logo.png" %></a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="/search">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="topnav"><a href="/sign_in"><%= image_tag "fb.png" %></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
