Add offers and claims to app.
A user can either offer a book or claim an offer, this allows us to
limit the amount of books you can borrow based on the number of ones you
are loaning.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Update your mobile number</h1>
 
+<p> Please enter your mobile number</p>
+
 <%= bootstrap_form_for @user do %>
   <%= label_tag :mobile_number, "Your 10-digit mobile number" %>
   <%= text_field_tag :mobile_number, maxlength: 10 %>
