--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,6 @@
 
 <%= bootstrap_form_for @user do |f| %>
   <%= f.label :mobile_number, "Your 10-digit mobile number" %>
-  <%= f.text_field :mobile_number, "", size: 10 %>
+  <%= f.text_field :mobile_number, size: 10 %>
   <%= label_tag :mobile_number, "4085551212" %>
 <% end %>
