--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -4,9 +4,21 @@
 <div class="hero-unit top">
   <div class="container">
    <div class="hero-unit top2">
-   <h1 class="tag">Find the books you need from other Students.  Save Your money for Keggers.  </h1>
-   </div>
+
+	<div class="left1">
+	 <%= image_tag "books.jpg", :class => 'books' %>
+	</div>
+
+	<div class="right1">
+  <h1 class="tag">Find the books you need from other Students.  Save Your money for Keggers.  </h1>
+	</div>
+
+  </div>
  </div>
+
+</div>
+<div class="clearfix2">
+
 </div>
 
 <div class="hero-unit middle">
