--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,8 @@
   <tr><th>Title</th></tr>
   <% @books.each do |book| %>
     <tr>
-      <td><%= book.title %></td>
+      <td><%= link_to book.title, book_path(book) %></td>
     </tr>
   <% end %>
 </table>
+
