updates to splash

--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -6,7 +6,7 @@
    <div class="hero-unit top2">
 
 	<div class="left1">
-	 <%= image_tag "books.jpg", :class => 'books' %>
+	 <%= image_tag "books.png", :class => 'books' %>
 	</div>
 
 	<div class="right1">
