temp clearfix div for formatting issue on body

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4109,6 +4109,13 @@ img.books {
 	clear: both;
 }
 
+.hero-unit.fix {
+	padding-bottom: 25px;
+	border-radius: 0px;
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 0px;
+}
+
 
 
 
