--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
@@ -26,6 +25,8 @@
       </div>
     </div>
   </div>
+<div class="hero-unit fix">
+</div>
 
 <%= yield %>
 
