--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3997,6 +3997,7 @@ h1.title {
  -moz-box-shadow: 0 5px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 5px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
  border-bottom: 5px solid #2E0854;
+ padding-top: 1px;
 
 }
 
