--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -33,6 +33,14 @@
    <div class="container">
      <div class="hero-unit top3">
 
+			 <div class="left2">
+				 <h1 class="tag">Get instant updates to your phone from other students.   </h1>
+			 	</div>
+
+			 <div class="right2">
+				 <%= image_tag "cell.png", :class => 'cell' %>
+			 	</div>
+
      </div>
    </div>
 </div>
