--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4112,7 +4112,7 @@ img.books {
 }
 
 .hero-unit.fix {
-	padding-bottom: 25px;
+	padding-bottom: 1px;
 	border-radius: 0px;
 	-moz-border-radius: 0px;
 	-webkit-border-radius: 0px;
@@ -4122,7 +4122,7 @@ img.books {
  float: left;
  width: 620px;
  height: 200px;
- padding-top: 50px;
+ padding-top: 5px;
  padding-bottom: 10px;
 }
 
@@ -4130,12 +4130,13 @@ img.books {
  float: left;
  width: 200px;
  height: 200px;
- padding-top: 50px;
+ padding-top: 5px;
  padding-bottom: 10px;
 }
 
 img.cell {
 	margin-left: 30px;
+	margin-top: 1px;
 }
 
 
