--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <a class="brand" href="#"><%= image_tag "logo.png" %></a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li class="topnav"><a href="/sign_in"><%= image_tag "fb.png" %></a></li>
+            <li class="topnav"><!--<%= link_to image_tag("fb.png"), new_user_session_path %>--></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
